# RustedSciThe

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
Book/: RST_Scientific_Users_and_Devs_Guide_eng.docx  RST_Scientific_Users_and_Devs_Guide_ru.docx  ~$T_Scientific_Users_and_Devs_Guide_ru.docx
benches/: bdf_sanity.rs  block_tridiag_benches.rs  bvp_benches.rs  faer_sparse_benches.rs  faer_sparse_vs_lapack_style_benches.rs  lu_benches.rs
examples/: atombasic.rs  banded_solvers_guide.rs  bdf_solver_examples.rs  bvp_backends_guide.rs  bvp_damped_aot_guide.rs  bvp_damped_lambdify_guide.rs  bvp_damped_numerical_guide.rs  bvp_frozen_aot_guide.rs  bvp_frozen_lambdify_guide.rs  bvp_frozen_numerical_route_guide.rs  bvp_sci_aot_guide.rs  bvp_sci_backends_guide.rs  bvp_sci_lambdify_guide.rs  bvp_sci_numerical_guide.rs  bvp_sci_numerical_parameters_guide.rs  bvp_task_shell_guide.rs  curve_fitting_guide.rs  ivp_backends_guide.rs  ivp_task_shell_backward_euler_guide.rs  ivp_task_shell_bdf_guide.rs  ivp_task_shell_guide.rs  legacy_main_compat.rs  lm_fitting_guide.rs  lorenz_2d_animation.rs  lorenz_3d_animation.rs  lsode2_aot_guide.rs  lsode2_lambdify_guide.rs  lsode2_lorenz_2d_animation.rs  lsode2_lorenz_3d_animation.rs  lsode2_manual_adams_guide.rs  lsode2_manual_bdf_guide.rs  lsode2_numerical_guide.rs  lsode2_task_shell_guide.rs  lsode2_three_body_problem.rs  nonlinear_systems_guide.rs  radau_backends_guide.rs  task_dispatcher_guide.rs  task_shell_guides_index.rs  three_body_problem.rs  universal_fitting_guide.rs  (+2 more)
examples/IVP/: bdf_solver_examples.rs
examples/misc/: cleanup_logs.rs  test_trig_parsing.rs
examples/plotting/: lorenz_2d_animation.rs  plot_mathematical_functions.rs  plot_static_functions.rs  plot_symbolic_functions.rs
examples/rus/: bvp_backends_guide.rs  bvp_damped_aot_guide.rs  bvp_damped_lambdify_guide.rs  bvp_damped_numerical_guide.rs  bvp_sci_aot_guide.rs  bvp_sci_backends_guide.rs  bvp_sci_lambdify_guide.rs  bvp_sci_numerical_guide.rs  bvp_sci_numerical_parameters_guide.rs  bvp_task_shell_guide.rs  ivp_task_shell_guide.rs  lm_fitting_guide.rs  lsode2_aot_guide.rs  lsode2_lambdify_guide.rs  lsode2_lorenz_2d_animation.rs  lsode2_lorenz_3d_animation.rs  lsode2_manual_adams_guide.rs  lsode2_manual_bdf_guide.rs  lsode2_numerical_guide.rs  lsode2_task_shell_guide.rs  lsode2_three_body_problem.rs  symbolic_construction_guide.rs  symbolic_derivatives_guide.rs  symbolic_indexed_guide.rs  symbolic_lambdify_and_simplify_guide.rs  universal_fitting_guide.rs  universal_ode_example.rs  varpro_fitting_guide.rs
examples/symbolic/: numerical_integration_quadrature.rs  symbolic_construction.rs  symbolic_construction_guide.rs  symbolic_derivatives_guide.rs  symbolic_indexed_guide.rs  symbolic_indexed_variables.rs  symbolic_integration_basic.rs  symbolic_integration_by_parts.rs  symbolic_integration_exponential.rs  symbolic_integration_trigonometric.rs  symbolic_jacobian.rs  symbolic_lambdify_and_simplify_guide.rs  symbolic_multivariable.rs  symbolic_single_variable.rs
src/: Examples.rs  TODO.md  Utils.rs  command_interpreter.rs  global.rs  lib.rs  main.rs  numerical.rs  somelinalg.rs  symbolic.rs  task_shell_cli.rs  test_division_simple.rs  test_simplify_fix.rs
src/Examples/: bvp_examples.rs  nonlinear_eqs_and_IVP_examples.rs  symbolic_examples.rs  utils_examples.rs
src/Utils/: animation_2d.rs  animation_3d.rs  bevy_2d.rs  bevy_2d_fixed.rs  logger.rs  plots.rs  postprocessing.rs  profiling.rs  sys_info.rs  task_parser.rs  task_parser_tests.rs
src/command_interpreter/: TASK_DOCS_GUIDE_EN.md  bvp_dialogue.rs  docx_parser.rs  ivp_dialogue.rs  task_parser.rs  task_parser_bvp.rs  task_parser_common.rs  task_parser_ivp.rs  task_parser_tests.rs  task_runner.rs
src/numerical/: BDF.rs  BE.rs  BVP_Damp.rs  BVP_NR.rs  BVP_api.rs  BVP_sci.rs  Examples_and_utils.rs  IVP_USER_GUIDE_EN.md  IVP_USER_GUIDE_RU.md  LSODE.rs  LSODE2.rs  NR.rs  NR_LM.rs  NR_LM_Nielsen.rs  NR_damped.rs  NR_for_Euler.rs  NR_for_ODE.rs  NR_trust_region.rs  NR_with_clipping.rs  NonStiff_api.rs  Nonlinear_systems.rs  ODE_api.rs  ODE_api2.rs  Radau.rs  Rosenbrock.rs  ShootingBVP.rs  data_processing.rs  optimization.rs  plots.rs  trust_region_LM.rs
src/numerical/BDF/: BDF_Algorithm.md  BDF_api.rs  BDF_solver.rs  BDF_utils.rs  bdf.py  common.rs
src/numerical/BVP_Damp/: BVP_DAMP_STORY_TESTS.md  BVP_DAMP_USER_GUIDE_EN.md  BVP_DAMP_USER_GUIDE_RU.md  BVP_Damp_codegen_compare_tests.rs  BVP_Damp_tests.rs  BVP_Damp_tests2.rs  BVP_Damp_tests3.rs  BVP_Damp_tests4.rs  BVP_api.rs  BVP_traits.rs  BVP_traits2.rs  BVP_utils.rs  BVP_utils_damped.rs  NR_Damp_solver_damped.rs  NR_Damp_solver_frozen.rs  adaptive_grid.rs  adaptive_grid2.rs  adaptive_grid3.rs  adaptive_grid_basic.rs  adaptive_grid_easiest.rs  adaptive_grid_easy.rs  adaptive_grid_twopoint.rs  (+6 more)
src/somelinalg/: BICGSTAB.rs  GMRES_mult_api.rs  GMRESapi.rs  LUsolver.rs  Lx_eq_b.rs  RustedLINPACK.rs  banded.rs  cuBLASinv.cpp  iterative_solvers_cpu.rs  iterative_solvers_gpu.rs  linear_sys_diagnostics.rs  some_matrix_inv.rs  Как приручить LAPACK в Rust на Windows.md
src/symbolic/: CodegenIR.rs  View.rs  codegen.rs  codegen_adapters.rs  codegen_aot_build.rs  codegen_aot_crate.rs  codegen_aot_driver.rs  codegen_aot_lifecycle_tests.rs  codegen_aot_registry.rs  codegen_aot_resolution.rs  codegen_aot_runtime_link.rs  codegen_backend_selection.rs  codegen_bvp_performance_tests.rs  codegen_dense_performance_tests.rs  codegen_generated_snapshot.rs  codegen_ivp_performance_tests.rs  codegen_manifest.rs  codegen_orchestrator.rs  codegen_parameterized_ivp_tests.rs  codegen_parameterized_tests.rs  codegen_pipeline_comparison_tests.rs  codegen_provider_api.rs  codegen_runtime_api.rs  codegen_tasks.rs  codegen_test_support.rs  lambdify_performance_tests.rs  parse_expr.rs  pretty_print.rs  symbolic_engine.rs  symbolic_engine_derivatives.rs  symbolic_engine_tests.rs  symbolic_functions.rs  symbolic_functions2.rs  symbolic_functions_BVP.rs  symbolic_functions_BVP2.rs  symbolic_functions_BVP_.rs  symbolic_functions_BVP_tests.rs  symbolic_integration.rs  symbolic_ir.rs  symbolic_ivp.rs  (+17 more)
(+285 files in other folders)
