[package]
name = "RustedSciThe"
version = "0.3.33"
edition = "2024"
description = "Rust framework for symbolic and numerical computing written under the influence of SciPy and Sympy:symbolic calculations,nonlinear systems,IVP and BVP,optimization,fitting,etc"
author = "Gleb Zasllavsky"
license = "MIT"
keywords = [ "mathematics", "science", "ODE", "symbolic"]
repository = "https://github.com/Gleb-Zaslavsky/RustedSciThe"


[features]
default = []
arrayfire = ["dep:arrayfire"]
# The cuda feature automatically includes arrayfire due to this line 
cuda = ["arrayfire"]
# must be added to vscode/settings.json
# {
#    "rust-analyzer.cargo.features": ["arrayfire", "cuda"]
# }

[package.metadata.rust-analyzer]
cargo = { features = ["arrayfire", "cuda"] }


[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"
[profile.dev]
opt-level = 0
debug = false 

[[bench]]
name = "bvp_benches"
harness = false

[profile.bench]
opt-level = 3
inherits = "release"
debug = false
strip = "none"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[dependencies]
arrayfire = { version = "3.8.0", package = "arrayfire_fork", optional = true }
itertools = "0.14.0"
nalgebra = { version = "0.34.1", features = [ "sparse"] }
nalgebra-sparse = "0.11.0"
num-traits = "0.2.17"
sprs = "0.11.4"
rand = "0.9.2"
ndarray = "0.17.2"
num = "0.4.3"
num-complex = "0.4.6"
plotters = "0.3.7"
gnuplot = "0.0.46"
csv = "1.4.0"
splines = "5.0.0"
approx = "0.5.1"
lapack = "0.20.0"
faer = "0.24.0"
faer_gmres = "0.5.0"
rayon="1.11.0"
regex = "1.12.3"
strum = "0.28.0"
strum_macros = "0.27.2"
simplelog = "0.12.2"
log = "0.4.29"
chrono = "0.4.44"
loc = "0.5.0"
toml = "0.9.8"
sysinfo = "0.38.4"
tabled = "0.20.0"
sys-info = "0.9.1"
criterion = "0.8.2"
enum_dispatch = "0.3.13"
src = "0.0.6"
nom = "8.0.0"
tempfile = "3.27.0"
cfg-if = "1.0.4"
gauss-quad = "0.3.0"
prettytable = "0.10.0"
textplots = "0.8.7"
wide = "1.2.0"
bevy = "0.18.1"
[target.'cfg(unix)'.dependencies]
pprof = { version = "0.15.0", features = ["flamegraph", "criterion"] }


