[package]
name = "RustedSciThe"
version = "0.4.8"
edition = "2024"
description = "Rust framework for symbolic and numerical computing:BVP ( Newton-Raphson frozen/damped/with collocations ), IVP( BDF, Radau, Backward Euler, LSODE, LSODA, RK45, DoPri), nonlinear equations ( Levenberg, Gavin) and more"
author = "Gleb Zaslavsky"
license = "MIT"
keywords = [ "mathematics", "science", "ODE", "symbolic"]
repository = "https://github.com/Gleb-Zaslavsky/RustedSciThe"
include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE.txt",
    "README.md",
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "tests/**/*",
    "!/.kilo",
    "!/.kilo/**",
]


[features]
default = []
arrayfire = ["dep:arrayfire"]
# The cuda feature automatically includes arrayfire due to this line 
cuda = ["arrayfire"]
# must be added to vscode/settings.json
# {
#    "rust-analyzer.cargo.features": ["arrayfire", "cuda"]
# }
lapack = ["dep:lapack"]
openblas-system = ["lapack", "dep:openblas-src"]

[package.metadata.rust-analyzer]
cargo = { features = ["arrayfire", "cuda"] }


[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"
[profile.dev]
opt-level = 0
debug = false 

[[bench]]
name = "bvp_benches"
harness = false
[[bench]]
name = "lu_benches"
harness = false
[[bench]]
name = "faer_sparse_benches"
harness = false
[[bench]]
name = "faer_sparse_vs_lapack_style_benches"
harness = false
[[bench]]
name = "block_tridiag_benches"
harness = false

[profile.bench]
opt-level = 3
inherits = "release"
debug = false
strip = "none"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[dependencies]
arrayfire = { version = "3.8.0", package = "arrayfire_fork", optional = true }
itertools = "0.14.0"
nalgebra = { version = "0.35.0", features = [ "sparse"] }
nalgebra-sparse = "0.12.0"
num-traits = "0.2.17"
sprs = "0.11.4"
rand = "0.10.1"
ndarray = "0.17.2"
num = "0.4.3"
num-complex = "0.4.6"
plotters = "0.3.7"
gnuplot = "0.0.46"
csv = "1.4.0"
splines = "5.0.0"
approx = "0.5.1"

faer =  { version ="0.24.0", features = [ "rayon"] }
faer_gmres = "0.5.0"
rayon="1.11.0"
regex = "1.12.3"
strum = "0.28.0"
strum_macros = "0.28.0"
simplelog = "0.12.2"
log = "0.4.29"
chrono = "0.4.41"
loc = "0.5.0"
toml = "1.1.2+spec-1.1.0"
sysinfo = "0.39.3"
tabled = "0.21.0"
sys-info = "0.9.1"
criterion = "0.8.2"
enum_dispatch = "0.3.13"
src = "0.0.6"
nom = "8.0.0"
tempfile = "3.27.0"
cfg-if = "1.0.4"
gauss-quad = "0.3.0"
prettytable = "0.10.0"
textplots = "0.8.7"
wide = "1.5.0"
bevy = "0.18.1"
thiserror = "2.0.18"
fastLowess = "1.3.0"
bspline = "1.1.0"
lapack = { version = "0.20", optional = true }
openblas-src = { version = "0.10.15", default-features = false, features = ["system"], optional = true }


colored = "3.1.1"
dialoguer = "0.12.0"
clap = { version = "4.5.20", features = ["derive"] }


ahash = "0.8"
append-only-vec = "0.1"
byteorder = "1.5"
bytes = "1.5"
once_cell = "1.19"
smallvec = "1.15.2"
smartstring = "1.0"
libloading = "0.8.9"



assert_matches = "1.5"
mockall = "0.14.0"
typed_test_gen = "0.1"


[target.'cfg(unix)'.dependencies]
pprof = { version = "0.15.0", features = ["flamegraph", "criterion"] }

[[example]]
name = "lorenz_2d_animation"
path = "examples/plotting/lorenz_2d_animation.rs"
[[example]]
name = "lorenz_3d_animation"
path = "examples/plotting/lorenz_3d_animation.rs"
[[example]]
name = "symbolic_construction_guide"
path = "examples/symbolic/symbolic_construction_guide.rs"
[[example]]
name = "symbolic_indexed_guide"
path = "examples/symbolic/symbolic_indexed_guide.rs"
[[example]]
name = "symbolic_lambdify_and_simplify_guide"
path = "examples/symbolic/symbolic_lambdify_and_simplify_guide.rs"
[[example]]
name = "symbolic_derivatives_guide"
path = "examples/symbolic/symbolic_derivatives_guide.rs"
[[example]]
name = "rus_symbolic_construction_guide"
path = "examples/rus/symbolic_construction_guide.rs"
[[example]]
name = "rus_symbolic_indexed_guide"
path = "examples/rus/symbolic_indexed_guide.rs"
[[example]]
name = "rus_symbolic_lambdify_and_simplify_guide"
path = "examples/rus/symbolic_lambdify_and_simplify_guide.rs"
[[example]]
name = "rus_symbolic_derivatives_guide"
path = "examples/rus/symbolic_derivatives_guide.rs"
[[example]]
name = "rus_bvp_backends_guide"
path = "examples/rus/bvp_backends_guide.rs"
[[example]]
name = "rus_bvp_damped_aot_guide"
path = "examples/rus/bvp_damped_aot_guide.rs"
[[example]]
name = "rus_bvp_damped_lambdify_guide"
path = "examples/rus/bvp_damped_lambdify_guide.rs"
[[example]]
name = "rus_bvp_damped_numerical_guide"
path = "examples/rus/bvp_damped_numerical_guide.rs"
[[example]]
name = "bvp_sci_backends_guide"
path = "examples/bvp_sci_backends_guide.rs"
[[example]]
name = "bvp_sci_lambdify_guide"
path = "examples/bvp_sci_lambdify_guide.rs"
[[example]]
name = "bvp_sci_aot_guide"
path = "examples/bvp_sci_aot_guide.rs"
[[example]]
name = "rus_bvp_sci_numerical_guide"
path = "examples/rus/bvp_sci_numerical_guide.rs"
[[example]]
name = "rus_bvp_sci_numerical_parameters_guide"
path = "examples/rus/bvp_sci_numerical_parameters_guide.rs"
[[example]]
name = "rus_bvp_sci_backends_guide"
path = "examples/rus/bvp_sci_backends_guide.rs"
[[example]]
name = "rus_bvp_sci_lambdify_guide"
path = "examples/rus/bvp_sci_lambdify_guide.rs"
[[example]]
name = "rus_bvp_sci_aot_guide"
path = "examples/rus/bvp_sci_aot_guide.rs"
[[example]]
name = "rus_bvp_task_shell_guide"
path = "examples/rus/bvp_task_shell_guide.rs"
[[example]]
name = "rus_ivp_task_shell_guide"
path = "examples/rus/ivp_task_shell_guide.rs"
[[example]]
name = "rus_lsode2_aot_guide"
path = "examples/rus/lsode2_aot_guide.rs"
[[example]]
name = "rus_lsode2_lambdify_guide"
path = "examples/rus/lsode2_lambdify_guide.rs"
[[example]]
name = "rus_lsode2_lorenz_2d_animation"
path = "examples/rus/lsode2_lorenz_2d_animation.rs"
[[example]]
name = "rus_lsode2_lorenz_3d_animation"
path = "examples/rus/lsode2_lorenz_3d_animation.rs"
[[example]]
name = "rus_lsode2_manual_adams_guide"
path = "examples/rus/lsode2_manual_adams_guide.rs"
[[example]]
name = "rus_lsode2_manual_bdf_guide"
path = "examples/rus/lsode2_manual_bdf_guide.rs"
[[example]]
name = "rus_lsode2_numerical_guide"
path = "examples/rus/lsode2_numerical_guide.rs"
[[example]]
name = "rus_lsode2_task_shell_guide"
path = "examples/rus/lsode2_task_shell_guide.rs"
[[example]]
name = "rus_lsode2_three_body_problem"
path = "examples/rus/lsode2_three_body_problem.rs"
[[example]]
name = "rus_universal_ode_example"
path = "examples/rus/universal_ode_example.rs"
